--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <section id="header">
-        <a href="https://kasiajewelry.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYKdGoPIGhtdxDBl3ChwROs9e3B2N2OIFdmQ&simgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064893001630&tbnid=TYIdvGzTKbcUWM&vet=1&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fbrookandyork%2F&docid=Ewc0i1mdVlMpQM&w=1500&h=1500&hl=en-us&source=sh%2Fx%2Fim%2Fm1%2F3&kgs=207c2083a28ca634_Jp50mPw4UnIbYWGUiRUXnWPpvp2Qg&sq=tbn:ANd9GcRUchHH3xZbe5hjArnSHC50gLhX6Xh4hBYRVuhaLlst6Uooo53WxaOjSAg&s=10" height="70" width="150" class="logo" alt=""></a>
+        <a href="https://vaskia.com"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYKdGoPIGhtdxDBl3ChwROs9e3B2N2OIFdmQ&simgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064893001630&tbnid=TYIdvGzTKbcUWM&vet=1&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fbrookandyork%2F&docid=Ewc0i1mdVlMpQM&w=1500&h=1500&hl=en-us&source=sh%2Fx%2Fim%2Fm1%2F3&kgs=207c2083a28ca634_Jp50mPw4UnIbYWGUiRUXnWPpvp2Qg&sq=tbn:ANd9GcRUchHH3xZbe5hjArnSHC50gLhX6Xh4hBYRVuhaLlst6Uooo53WxaOjSAg&s=10" height="70" width="150" class="logo" alt=""></a>
     </section>
 
       <div class="wrapper" style="background-image: url('images/bg-registration-form-1.jpg');">
