--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="image-holder">
             <img src="hiring.jpg" alt="">
           </div>
-          <form action="https://formsubmit.co/dunnrichardr@gmail.com" method="POST">
+          <form action="https://formspree.io/f/xwpokjwl" method="POST">
             <h5>Our Growing Team is Looking For Its Next All-Star Marketing Associate! Could It Be You?</h5>
             <div class="form-group">
               <input type="text" placeholder="First Name" class="form-control" required="required" name="first">
